@@ -28,13 +28,14 @@ module Cucumber
 
     class Scenario < BaseScenario
       MIN_PADDING = 2
+      INDENT = 2 
       
       # If a table follows, the header will be stored here. Weird, but convenient.
       attr_accessor :table_header
       attr_reader :name, :line
       
-      def initialize(feature, name, &proc)
-        @feature, @name = feature, name
+      def initialize(feature, name, line, &proc)
+        @feature, @name, @line = feature, name, line
         @steps_and_given_scenarios = []
         instance_eval(&proc) if block_given?
       end
@@ -51,12 +52,26 @@ module Cucumber
         @feature.scenario_named(name)
       end
 
-      def padding_length(step)
-        (max_step_length - step.length) + MIN_PADDING
+      def length
+        Cucumber.language['scenario'].length + 2 + (@name.nil? ? 0 : @name.length)
+      end
+
+      def max_padding_length
+        length > max_step_length ? length : max_step_length
+      end
+
+      def padding_length
+        padding = (max_padding_length - length) + MIN_PADDING
+        padding += INDENT unless length > max_step_length
+        padding
+      end
+
+      def step_padding_length(step)
+        (max_padding_length - step.length) + MIN_PADDING
       end
       
       def max_step_length
-        steps.map{|step| step.length}.max
+        steps.map{|step| step.length}.max || 0
       end
 
       def row?
