@@ -33,7 +33,8 @@ grammar Feature
   rule scenario
     scenario_keyword space name:line_to_eol steps:(space step_sequence)? {
       def compile(feature)
-        scenario = feature.add_scenario(name.text_value.strip)
+        line = input.line_of(interval.first)
+        scenario = feature.add_scenario(name.text_value.strip, line)
         steps.step_sequence.compile(scenario) if steps.respond_to?(:step_sequence)
         # TODO - GET RID OF THIS last_scenario NASTINESS
         # Use a better datastructure, like a linked list...
